# creation_llm

./: .gitignore  README.md  infer.py  pyproject.toml  requirements.txt  train.py
configs/: answerability.yaml  inference.yaml  retrieval.yaml  tokenizer.yaml  train.yaml
data/: 01_book_clean.txt  02_tokenizer_corpus.txt  03_angels_structured.jsonl  04_retrieval_chunks.jsonl  06_sft_chat_val.jsonl  09_system_prompt.txt  10_recommended_training_config.yaml  README.md  stats.json
modules/: __init__.py  answerability_model.py  answerability_trainer.py  checkpointing.py  collators.py  config.py  constants.py  dataset_answerability.py  dataset_sft.py  distributed.py  evaluator.py  exceptions.py  generation.py  inference_pipeline.py  io_utils.py  logger.py  metrics.py  model_config.py  modeling_decoder_lm.py  paths.py  postcheck.py  prompt_builder.py  retrieval_index.py  retriever.py  seed.py  text_utils.py  tokenizer_trainer.py  tokenizer_utils.py  trainer_lm.py
scripts/: build_retrieval.py  evaluate.py  infer.py  train_answerability.py  train_lm.py  train_tokenizer.py
tests/: conftest.py  test_answerability.py  test_datasets.py  test_inference_pipeline.py  test_model_shapes.py  test_retrieval.py  test_tokenizer.py
